Feat(financialanalysis): extend analysis with Value and Quality metrics